sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
var b=true
var c=-1;
	var a=getNombreValeurs()
	while (b==true) {
		b=false	

		
		for (i<-0 to a-2-c) {
				
			if (plusPetit(i+1,i)) {echange(i+1,i); b=true }

		
		}
		c=c+1 
	}
}
